<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="add">Add</string>
    <string name="album">Album</string>
    <string name="album_artist">Album artist</string>
    <string name="artist">Artist</string>
    <string name="disc_number_text">Disc number</string>
    <string name="download">Download</string>
    <string name="encoding_type">Encoding type</string>
    <string name="favorite_help_view_guide">Tap the Heart icon next to your playlists, albums, artists, and folders. Your favorite songs will be listed here.</string>
    <string name="genre">Genre</string>
    <string name="legacy_set_as">Set as</string>
    <string name="manage_tabs">Manage tabs</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_details">Details</string>
    <string name="menu_move_out_of_secure_folder">Move out of %s</string>
    <string name="menu_move_to_container">Move to %s</string>
    <string name="menu_move_to_personal_mode">Move to Personal mode</string>
    <string name="menu_move_to_private">Move to Private</string>
    <string name="menu_play">Play</string>
    <string name="menu_remove_from_private">Remove from Private</string>
    <string name="menu_share">Share</string>
    <string name="menu_via_bluetooth">Listen via Bluetooth</string>
    <string name="menu_via_device">Listen via device</string>
    <string name="meta_edit_guide">The track details will be saved in Unicode. Set the encoding type to view the details in different languages without corrupting the data.</string>
    <string name="music_core_smart_view">Smart View</string>
    <string name="no_cards">No cards</string>
    <string name="play_on_other_device">Play on other device</string>
    <string name="play_speed">Play speed</string>
    <string name="recording_date">Recording date</string>
    <string name="screen_off_music">Music with screen off</string>
    <string name="screen_off_music_summary">Play music from the lock screen when headphones are connected and the screen is off.</string>
    <string name="settings">Settings</string>
    <string name="settings_lock_screen">Control using lock screen</string>
    <string name="settings_lock_screen_summary">Control your music without unlocking your phone.</string>
    <string name="skip_silences">Skip silences</string>
    <string name="skip_silences_summary">Skip silences between tracks to reduce pauses during playback.</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="smart_volume">Smart volume</string>
    <string name="smart_volume_summary">Automatically adjust each track to the same volume.</string>
    <string name="title">Title</string>
    <string name="track_number">Track number</string>
    <string name="voice_control">Voice control</string>
    <string name="voice_control_summary">Use voice commands to control the music player</string>
    <string name="cache_size_setting">Caching data</string>
    <string name="device_management_setting">Device registration</string>
    <string name="download_audio_quality">Downloading audio quality</string>
    <string name="duplicate_option">Delete duplicated track lists</string>
    <string name="duplicate_option_summary">Delete duplicated songs when songs are added to your current playlist</string>
    <string name="enqueue">Current playlist ordering</string>
    <string name="explicit_setting">Enable explicit contents</string>
    <string name="milk_radio_add_to_my_stations_menu_item">Add to My stations</string>
    <string name="milk_radio_add_to_playlist_menu_item">Add to playlist</string>
    <string name="milk_radio_ban_song_menu_item">Block song</string>
    <string name="milk_radio_create_station_from_artist">Create station from artist</string>
    <string name="milk_radio_create_station_from_song">Create station from song</string>
    <string name="milk_radio_customize_dial_menu_item">Customise dial</string>
    <string name="milk_radio_history_menu_item">Radio History</string>
    <string name="milk_radio_mainoption_album_detail_menu_item">Albums</string>
    <string name="milk_radio_mainoption_artist_detail_menu_item">Artists</string>
    <string name="milk_radio_my_stations_genre_label">MY STATIONS</string>
    <string name="milk_radio_my_stations_item_menu_edit">Edit station</string>
    <string name="milk_radio_play_available">provided songs</string>
    <string name="milk_radio_play_basic_offer">Basic</string>
    <string name="milk_radio_play_bonus_offer">Additional</string>
    <string name="milk_radio_play_done">listened</string>
    <string name="milk_radio_play_enjoy">Enjoy Radio</string>
    <string name="milk_radio_play_guide_text1">※ The number of songs to be listened is reset on the first day of the month.</string>
    <string name="milk_radio_play_guide_text2">※ The number of songs available for free is not carried forward.</string>
    <string name="milk_radio_play_guide_text3">※ The number of songs will be deducted only if you listen to the song for more than one minute.</string>
    <string name="milk_radio_play_remain">listenable</string>
    <string name="milk_radio_play_total_offer">Total</string>
    <string name="milk_radio_remove_from_my_stations_menu_item">Remove from My Stations</string>
    <string name="milk_radio_share_song_menu_item">Share song</string>
    <string name="milk_radio_share_station_menu_item">Share station</string>
    <string name="milk_setting_drm_license">Extend DRM period</string>
    <string name="milk_store_music_video">Music Video</string>
    <string name="mobile_data">Connect via mobile data</string>
    <string name="my_music_mode">My Music mode</string>
    <string name="my_music_mode_summary">The store and radio will not be used.</string>
    <string name="play_option">Playing option</string>
    <string name="play_similar_station_setting">Play similar station</string>
    <string name="play_similar_station_summary">Continue playing similar stations when the current station is finished.</string>
    <string name="push_notification_setting">Receive marketing information</string>
    <string name="streaming_audio_quality">Streaming audio quality</string>
    <string name="adapt_sound">Adapt Sound</string>
    <string name="drm_expired_test_menu">DRM 만료 테스트</string>
    <string name="edge_lighting">Edge Lighting</string>
    <string name="edge_lighting_summary">Edge Lighting</string>
    <string name="menu_sound_alive">SoundAlive</string>
</resources>