<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:menuCategory="system">
        <item android:icon="@drawable/music_ic_ab_soundalive" android:id="@id/menu_sound_alive" android:title="@string/menu_sound_alive" android:showAsAction="always" />
        <item android:id="@id/menu_create_my_station_with_track" android:visible="false" android:title="@string/milk_radio_create_station_from_song" />
        <item android:id="@id/menu_create_my_station_with_artist" android:visible="false" android:title="@string/milk_radio_create_station_from_artist" />
        <item android:id="@id/menu_online_share" android:visible="false" android:title="@string/menu_share" />
        <item android:id="@id/menu_download" android:visible="false" android:title="@string/download" />
        <item android:id="@id/menu_share" android:title="@string/menu_share" />
        <item android:id="@id/menu_add_to_playlist_full_player" android:title="@string/add" />
        <item android:id="@id/menu_go_album" android:title="@string/album" />
        <item android:id="@id/menu_go_artist" android:title="@string/artist" />
        <item android:id="@id/menu_online_go_artist" android:visible="false" android:title="@string/artist" />
        <item android:id="@id/menu_music_video" android:visible="false" android:title="@string/milk_store_music_video" />
        <item android:id="@id/menu_delete" android:title="@string/menu_delete" />
        <item android:id="@id/menu_play_on_other_device" android:title="@string/play_on_other_device" />
        <item android:id="@id/menu_screen_sharing" android:title="@string/music_core_smart_view" />
        <item android:id="@id/legacy_menu_set_as" android:title="@string/legacy_set_as" />
        <item android:id="@id/menu_listen_via_bt" android:title="@string/menu_via_bluetooth" />
        <item android:id="@id/menu_listen_via_device" android:title="@string/menu_via_device" />
        <item android:id="@id/menu_details_full_player" android:title="@string/menu_details" />
        <item android:id="@id/menu_launch_setting" android:title="@string/settings" />
    </group>
</menu>