<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/menu_group_bottom_bar">
        <item android:icon="@drawable/music_bottombar_ic_play" android:id="@id/menu_play_bottom_bar" android:title="@string/menu_play" />
        <item android:icon="@drawable/music_bottombar_ic_add" android:id="@id/add_to_bottom_bar" android:title="@string/add" />
        <item android:icon="@drawable/music_bottombar_ic_share" android:id="@id/menu_bottom_bar_share" android:title="@string/menu_share" />
        <item android:icon="@drawable/music_bottombar_ic_deleted" android:id="@id/menu_delete_bottom_bar" android:title="@string/menu_delete" />
    </group>
    <group android:id="@id/menu_group_secure">
        <item android:id="@id/menu_move_to_knox" android:title="@string/menu_move_to_container" android:showAsAction="never" />
        <item android:id="@id/menu_move_to_personal_mode" android:title="@string/menu_move_to_personal_mode" android:showAsAction="never" />
        <item android:id="@id/menu_move_to_knox_b2b" android:title="@string/menu_move_to_container" android:showAsAction="never" />
        <item android:id="@id/menu_move_to_secure_folder" android:title="@string/menu_move_to_container" android:showAsAction="never" />
        <item android:id="@id/menu_move_to_secure_folder_b2b" android:title="@string/menu_move_to_container" android:showAsAction="never" />
        <item android:id="@id/menu_move_out_of_secure_folder" android:title="@string/menu_move_out_of_secure_folder" android:showAsAction="never" />
        <item android:id="@id/menu_move_to_private" android:title="@string/menu_move_to_private" android:showAsAction="never" />
        <item android:id="@id/menu_remove_from_private" android:title="@string/menu_remove_from_private" android:showAsAction="never" />
    </group>
</menu>