<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.samsung.android.app.musiclibrary.ui.widget.MusicPathLineAnimationView android:id="@id/favorite_help_image" android:layout_width="@dimen/favorite_help_image_size" android:layout_height="@dimen/favorite_help_image_size" />
        <TextView android:textSize="@dimen/favorite_help_state_text" android:textColor="@color/favorite_help_state_text" android:gravity="center" android:id="@id/favorite_help_state_text" android:layout_marginTop="@dimen/favorite_help_state_text_margin_top" android:text="@string/no_cards" style="@style/Text.SecLight.NoItem" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/favorite_help_guide_text_margin_top" android:weightSum="1.0">
            <TextView android:textSize="@dimen/favorite_help_guide_text" android:textColor="@color/favorite_help_guide_text" android:gravity="center_horizontal" android:id="@id/favorite_help_guide_text" android:layout_width="0.0dip" android:text="@string/favorite_help_view_guide" android:layout_weight="0.75" style="@style/Text.SecLight.NoItem" />
        </LinearLayout>
        <TextView android:textSize="@dimen/favorite_help_close_text" android:textColor="@color/favorite_help_close_text" android:ellipsize="end" android:gravity="center" android:id="@id/favorite_help_manage_tab" android:background="@drawable/favorite_help_view_manage_tab" android:focusable="true" android:layout_marginTop="@dimen/favorite_help_close_margin_top" android:text="@string/manage_tabs" android:maxLines="1" android:singleLine="true" android:textAllCaps="true" style="@style/Text.SecLight.NoItem" />
    </LinearLayout>
</ScrollView>